# ERP-GAS

./: .gitignore  .mcp.json  CLAUDE.md  env.download  next.config.mjs  package-lock.json  package.json
.claude/: settings.local.json
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: CFDI-FINKOK-GUIA.md  CONFIGURACION-SISTEMA.md  PENDIENTES-OC-AUTOMATICO.md  app-movil-android-pwabuilder.md  finkok-registration.md
docs/comercial/: 01_negocio_solac.md  02_estacionalidad_gaslp.md  03_palancas_normativas_2026.md  04_diagnostico_cartera_mayo_2026.md  05_canales_prospeccion.md  06_fuentes_publicas_prospeccion.md  07_plan_inbound_arranque.md  README.md
public/: manifest.json
scripts/: all_blocks.sql  block_01.sql  block_02.sql  block_03.sql  block_06.sql  block_07.sql  block_08.sql  block_10.sql  block_12.sql  block_13.sql  block_14.sql  block_16.sql  block_18.sql  block_19.sql  exec_block_04.txt  exec_block_05.txt  exec_block_09.txt  exec_block_11.txt  exec_block_15.txt  exec_block_17.txt  exec_block_20.txt  execute_import.py  gen_csv.py  gen_plpgsql_import.py  group_1.sql  group_2.sql  group_3.sql  group_4.sql  import_mascotienda_productos.py  mascotienda_clean.sql  mascotienda_productos.csv  mascotienda_productos.sql  mini_01.sql  mini_02.sql  mini_03.sql  mini_04.sql  mini_05.sql  mini_06.sql  mini_07.sql  mini_08.sql  (+2 more)
src/: middleware.ts
(+374 files in other folders)
