[package]
name = "cuanty-erp"
version = "0.1.0"
description = "CUANTY ERP desktop wrapper"
authors = ["Sixale730"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cuanty_erp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-window-state = "2.2"
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-opener = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
